fix spacing

--- a/css/base.page.scss
+++ b/css/base.page.scss
@@ -70,10 +70,12 @@ form {
     border: 1px solid #3d3d3d;
     background-color: $inuit-base-background-color;
     
-    font-size: 20px;
+    font-size: 18px;
+    line-height: 24px;
 
     @media screen and (min-width: 600px) {
-        font-size: 28px;
+        font-size: 22px;
+        line-height: 26px;
     }
 
     &::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -122,7 +124,7 @@ form {
     padding-top: 65px;
 
     @media screen and (min-width: 600px) {
-        padding-top: 100px;
+        padding-top: 180px;
     }
 
     padding-right: $inuit-base-spacing-unit;
@@ -133,7 +135,7 @@ form {
 
 .page-section--text {
     @media screen and (min-width: 600px) {
-        padding-right: 275px;
+        padding-right: 150px;
     }
 }
 
@@ -147,6 +149,8 @@ a {
 
 .heading {
     font-size: 40px;
+    font-weight: 500;
+
     @media screen and (min-width: 750px) {
         font-size: 90px;
     }
@@ -154,11 +158,11 @@ a {
 
 p {
     font-size: 18px;
-    line-height: 25px;
+    line-height: 24px;
 
     @media screen and (min-width: 600px) {
-        font-size: 26px;
-        line-height: 36px;
+        font-size: 30px;
+        line-height: 34px;
     }
 
     margin-bottom: $inuit-base-spacing-unit;
@@ -166,11 +170,11 @@ p {
 
 .small p {
     font-size: 18px;
-    line-height: 25px;
+    line-height: 24px;
 
     @media screen and (min-width: 600px) {
-        font-size: 20px;
-        line-height: 28px;
+        font-size: 22px;
+        line-height: 26px;
     }
 }
 
