--- a/css/settings.settings.scss
+++ b/css/settings.settings.scss
@@ -3,6 +3,8 @@
 \*------------------------------------*/
 
 $inuit-enable-margins: true;
+$inuit-enable-margins--small: true;
+$inuit-enable-paddings--small: true;
 
 // Colour
 $burton-red: #88221E;
